--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
+    "@aws-sdk/client-s3": "^3.395.0",
+    "@coreui/react": "^5.0.0-alpha.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
+    "firebase": "^10.2.0",
+    "mime-types": "^2.1.35",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.3",
+    "multiparty": "^4.2.3",
     "next": "13.4.18",
+    "next-auth": "^4.23.1",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
   }
 }
